--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,18 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
-    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.0"
-  }
+  },
+    "name": "server",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+      "start": "node index.js"
+    },
+    "engines": {
+      "node": ">=14.20.1"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
