--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.0"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
